# telegram-channel-multiplexer

./: .gitignore  Dockerfile  README.md  config.example.yml  pyproject.toml  requirements-dev.txt  requirements.txt
src/telegram_channel_multiplexer/: bot.py  config.py  forwarder.py
tests/: test_bot_handlers.py  test_config_manager.py  test_forwarder.py
